PUCDR-393 Parking Record setting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,11 @@
     <string name="tv_system_settings_2nd_camera">2nd Camera</string>
     <string name="tv_system_settings_system_update">System update</string>
     <string name="tv_system_settings_system_information">System Information</string>
+    <string name="parking_record_rt">Recording time</string>
+    <string name="parking_record_settings">Parking Record Settings</string>
+    <string name="parking_recording_off">OFF</string>
+    <string name="time_10s">10 sec</string>
+    <string name="time_20s">20 sec</string>
+    <string name="time_30s">30 sec</string>
+    <string name="record_time_setting">Record Time Setting</string>
 </resources>
