--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,15 @@
         <item>5</item>
     </string-array>
 
+    <string-array name="driving_support">
+        <item>Front collision warning</item>
+        <item>Lane departure warning</item>
+        <item>Pedestrian Detection</item>
+        <item>Drowsiness detection</item>
+        <item>Departure delay warning</item>
+        <item>Range of </item>
+    </string-array>
+
     <string-array name="multi_select_list_preference_default_value" />
 
     <string name="pref_title_system_sync_settings">System sync settings</string>
@@ -126,5 +135,5 @@
     <string name="audio_setting">Audio Setting</string>
     <string name="set_sdcard_permission">Application for SD card permissions</string>
     <string name="inserted_ok">OK</string>
->>>>>>> cb53c6222b4c8db9a07bad1675c7d6899c894cbd
+    >>>>>>> cb53c6222b4c8db9a07bad1675c7d6899c894cbd
 </resources>
