--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,11 @@
         <item>Information stamp record</item>
     </string-array>
 
+    <string-array name="sdcard_record">
+        <item>Sdcard Information</item>
+        <item>Sdcard Initialization</item>
+    </string-array>
+
     <string-array name="parking_record">
         <item>Recording time</item>
     </string-array>
@@ -145,5 +150,9 @@
     <string name="audio_setting">Audio Setting</string>
     <string name="set_sdcard_permission">Application for SD card permissions</string>
     <string name="inserted_ok">OK</string>
+
+    <string name="sdcard_setting">SD Card Menu</string>
+    <string name="sdcard_setting_information">Sdcard Information</string>
+    <string name="sdcard_setting_initialization">Sdcard Initialization</string>
 
 </resources>
