复用二级菜单公共类,删除无用文件及代码

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="main_menu_cs">Communication Setting</string>
 
     <string name="tv_system_settings">System settings</string>
-    <string name="tv_system_settings_date_time">Date Time</string>
+    <string name="tv_system_settings_date_time">Date/Time</string>
     <string name="tv_system_settings_notification_sound_volume">Notification sound volume</string>
     <string name="tv_system_settings_playback_volume">Playback volume</string>
     <string name="tv_system_settings_lcd_brightness">LCD Brightness</string>
