SystemSetting中添加Preview和Installation wizard选项

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,12 +47,14 @@
     <string name="tv_system_settings_date_time">Date/Time</string>
     <string name="tv_system_settings_notification_sound_volume">Notification sound volume</string>
     <string name="tv_system_settings_playback_volume">Playback volume</string>
+    <string name="tv_system_settings_preview">Preview</string>
     <string name="tv_system_settings_lcd_brightness">LCD Brightness</string>
     <string name="tv_system_settings_screen_power_saving">Monitor screen Power saving setting</string>
     <string name="tv_system_settings_installation_tool">Installation tool</string>
     <string name="tv_system_settings_bluetooth">Bluetooth</string>
     <string name="tv_system_settings_infrared_led">Infrared LED</string>
     <string name="tv_system_settings_setting_initialization">Setting initialization</string>
+    <string name="tv_system_settings_installation_wizard">Installation wizard</string>
     <string name="tv_system_settings_2nd_camera">2nd Camera</string>
     <string name="tv_system_settings_system_update">System update</string>
     <string name="tv_system_settings_system_information">System Information</string>
