修改Settings app 名称为Asetting

--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Settings</string>
+    <string name="app_name">ASettings</string>
 
     <!-- Strings related to Settings -->
 
