--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Settings</string>
+    <string name="app_name">ASettings</string>
 
     <!-- Strings related to Settings -->
 
