--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Settings</string>
+    <string name="app_name">ASettings</string>
 
     <!-- Strings related to Settings -->
 
@@ -73,6 +73,7 @@
     <string name="imapct_sensitivity">Imapct Sensitivity</string>
     <string name="audio_setting">Audio Setting</string>
     <string name="set_sdcard_permission">Application for SD card permissions</string>
+    <string name="set_location_permission">Application for Position permissions</string>
     <string name="inserted_ok">OK</string>
 
     <string name="sdcard_setting">SD Card Menu</string>
@@ -128,5 +129,7 @@
     <string name="leveler_detail_context1">Regulation makes the horizontal drive recorder.</string>
     <string name="leveler_detail_context2">1 . At the car park on the safety level.</string>
     <string name="leveler_detail_context3">2 . In the next screen, moving round to come in the middle of this machine to adjust the inclination.</string>
+    <string name="gps_status_title">GPS Trusted</string>
+
 
 </resources>
