--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,7 @@
     <string name="set_wizard_help_context_vehicle_type">Vehicle Type setting confirmation</string>
     <string name="set_wizard_help_context_mounting_position">Mounting Position setting confirmation</string>
     <string name="set_wizard_help_context_range">Range setting confirmation</string>
+    <string name="set_wizard_help_finish">Setup completion</string>
+
 
 </resources>
