--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,14 @@
     <string name="set_wizard_help_context_range">Range setting confirmation</string>
     <string name="set_wizard_help_finish">Setup completion</string>
     <string name="check_update">Is check update package</string>
+    <string name="sure_to_update">Sure to update ?</string>
+    <string name="package_not_exist">Package is not exist</string>
+    <string name="driving_setting_marqueeText_front">ONに設定すると、自車と前走車との距離が近くなった時にお知らせします</string>
+    <string name="driving_setting_marqueeText_lane">ONに設定すると、自車が走行車線をはみ出した時にお知らせします</string>
+    <string name="driving_setting_marqueeText_departure">ONに設定すると、自車が停車中に前走車との距離が遠くなった時にお知らせします</string>
+    <string name="driving_setting_marqueeText_install">走行車線を正しく検出するために設定します。本機を取り付けた水平方向の位置を選択します</string>
+    <string name="driving_setting_marqueeText_pedestrain">ONに設定すると、歩行者が近づいた時にお知らせします</string>
+
 
 
 </resources>
