修改水平器调节确认界面

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -123,10 +123,10 @@
 
     <string name="installation_tool_leveler">Leveler</string>
     <string name="installation_tool_satellite">Satellite reception status</string>
-    <string name="leveler_detail_title">Leveler</string>
-    <string name="leveler_detail_context1">Regulation makes the horizontal drive recorder.</string>
-    <string name="leveler_detail_context2">1 . At the car park on the safety level.</string>
-    <string name="leveler_detail_context3">2 . In the next screen, moving round to come in the middle of this machine to adjust the inclination.</string>
+    <string name="leveler_detail_title">Level Adjustment</string>
+    <string name="leveler_detail_context1">Adjust level of driving recording.</string>
+    <string name="leveler_detail_context2">1 . Parking the car in a safe and level place.</string>
+    <string name="leveler_detail_context3">2 . On the next screen, adjust the title of the machine so that the moving circle comes to the center.</string>
     <string name="gps_status_title">GPS Trusted</string>
     <string name="communication">Communication Setting</string>
     <string name="communication_emergency_contact_person">Emergency Contact Person</string>
@@ -188,5 +188,7 @@
     <string name="weather_information">Weather information</string>
     <string name="road_kill">Road Kill</string>
     <string name="location_information">Location information</string>
+
+    <string name="skip">Skip</string>
 
 </resources>
