--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,35 +32,35 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="tv_menu">MENU</string>
-    <string name="main_menu_prs">Parking Recording Setting</string>
-    <string name="main_menu_fp">File Playback</string>
-    <string name="main_menu_mirs">Movie/Still Image Recording Setting</string>
-    <string name="main_menu_vt">Vehicle Type</string>
-    <string name="main_menu_dsfs">Driving Support Function Setting</string>
-    <string name="main_menu_nsg">Notification Sound Guidance</string>
-    <string name="main_menu_ss">System Setting</string>
-    <string name="main_menu_scm">SD Card Menu</string>
-    <string name="main_menu_si">Service Information</string>
-    <string name="main_menu_cs">Communication Setting</string>
+    <string name="main_menu_prs">駐車録画設定</string>
+    <string name="main_menu_fp">ファイル再生</string>
+    <string name="main_menu_mirs">動画, 靜止画紀錄設定</string>
+    <string name="main_menu_vt">車両タイプ</string>
+    <string name="main_menu_dsfs">運転支援機能設定</string>
+    <string name="main_menu_nsg">音声案内</string>
+    <string name="main_menu_ss">システム設定</string>
+    <string name="main_menu_scm">SD カード　メ二ユー</string>
+    <string name="main_menu_si">サービスメニュー</string>
+    <string name="main_menu_cs">通信機能設定</string>
 
-    <string name="tv_system_settings">System settings</string>
-    <string name="tv_system_settings_date_time">Date/Time</string>
-    <string name="tv_system_settings_notification_sound_volume">Notification sound volume</string>
-    <string name="tv_system_settings_playback_volume">Playback volume</string>
+    <string name="tv_system_settings">システム設定</string>
+    <string name="tv_system_settings_date_time">日付/時刻</string>
+    <string name="tv_system_settings_notification_sound_volume">報知音音量</string>
+    <string name="tv_system_settings_playback_volume">再生音量</string>
     <string name="tv_system_settings_preview">Preview</string>
-    <string name="tv_system_settings_lcd_brightness">LCD Brightness</string>
-    <string name="tv_system_settings_screen_power_saving">Monitor screen Power saving setting</string>
+    <string name="tv_system_settings_lcd_brightness">モニター明るさ</string>
+    <string name="tv_system_settings_screen_power_saving">モニター画面節電</string>
     <string name="tv_system_settings_installation_tool">Installation tool</string>
-    <string name="tv_system_settings_bluetooth">Bluetooth</string>
+    <string name="tv_system_settings_bluetooth">Bluetooth設定</string>
     <string name="tv_system_settings_infrared_led">Infrared LED</string>
     <string name="tv_system_settings_setting_initialization">Setting initialization</string>
     <string name="tv_system_settings_installation_wizard">Installation wizard</string>
     <string name="tv_system_settings_2nd_camera">2nd Camera</string>
     <string name="tv_system_settings_system_update">System update</string>
-    <string name="tv_system_settings_system_information">System Information</string>
+    <string name="tv_system_settings_system_information">システム情報</string>
 
     <string name="parking_record_rt">Recording time</string>
-    <string name="parking_record_settings">Parking Record Settings</string>
+    <string name="parking_record_settings">駐車録画設定 </string>
     <string name="parking_recording_off">OFF</string>
     <string name="time_10s">10 sec</string>
     <string name="time_20s">20 sec</string>
@@ -74,7 +74,7 @@
     <string name="set_location_permission">Application for Position permissions</string>
     <string name="inserted_ok">OK</string>
 
-    <string name="sdcard_setting">SD Card Menu</string>
+    <string name="sdcard_setting">SD カード　メ二ユー</string>
     <string name="sdcard_setting_information">Sdcard Information</string>
     <string name="sdcard_setting_initialization">Sdcard Initialization</string>
     <string name="sdcard_normal_dir">Normal : </string>
@@ -89,7 +89,7 @@
     <string name="sdcard_init_success">Format Success</string>
     <string name="sdcard_init_fail">Format Failed</string>
 
-    <string name="tv_date_time">Date/time</string>
+    <string name="tv_date_time">日付/時刻</string>
     <string name="tv_automatic">Automatic</string>
     <string name="tv_manual">Manual</string>
     <string name="tv_date_time_setting">Date/time setting</string>
@@ -134,7 +134,7 @@
     <string name="communication_emergency_automatic_notification_on">ON</string>
     <string name="communication_emergency_automatic_notification_off">OFF</string>
     <string name="system_version">System Version</string>
-    <string name="mounting_position">Mounting Position</string>
+    <string name="mounting_position">取付位置</string>
     <string name="mounting_position_left">Left</string>
     <string name="mounting_position_middle">Middle</string>
     <string name="mounting_position_right">Right</string>
@@ -188,6 +188,7 @@
     <string name="weather_information">気象情報</string>
     <string name="road_kill">動物飛び出し(ロードキル)</string>
     <string name="location_information">位置情報に関する通知</string>
+
     <string name="skip">Skip</string>
 
 </resources>
