--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,12 @@
     <string name="tv_menu">MENU</string>
     <string name="main_menu_prs">駐車録画設定</string>
     <string name="main_menu_fp">ファイル再生</string>
-    <string name="main_menu_mirs">動画, 靜止画紀錄設定</string>
-    <string name="main_menu_vt">車両タイプ</string>
+    <string name="main_menu_mirs">動画記録設定</string>
+    <string name="main_menu_vt">車両タイプ設定</string>
     <string name="main_menu_dsfs">運転支援機能設定</string>
     <string name="main_menu_nsg">音声案内</string>
     <string name="main_menu_ss">システム設定</string>
-    <string name="main_menu_scm">SD カード　メ二ユー</string>
+    <string name="main_menu_scm">SDカードメニュー</string>
     <string name="main_menu_si">サービスメニュー</string>
     <string name="main_menu_cs">通信機能設定</string>
 
@@ -67,16 +67,16 @@
     <string name="time_30s">30 sec</string>
     <string name="record_time_setting">Record Time Setting</string>
     <string name="audio_recording">音声記録</string>
-    <string name="impact_detection_sensitivity">衝撃感知</string>
-    <string name="information_stamp_record">情報スタンプ</string>
-    <string name="movie_record_setting">動画, 靜止画紀錄設定</string>
+    <string name="impact_detection_sensitivity">衝撃検知感度</string>
+    <string name="information_stamp_record">情報スタンプ記録</string>
+    <string name="movie_record_setting">動画記録設定</string>
     <string name="set_sdcard_permission">Application for SD card permissions</string>
     <string name="set_location_permission">Application for Position permissions</string>
     <string name="inserted_ok">OK</string>
 
-    <string name="sdcard_setting">SD カード　メ二ユー</string>
-    <string name="sdcard_setting_information">Sdcard Information</string>
-    <string name="sdcard_setting_initialization">Sdcard Initialization</string>
+    <string name="sdcard_setting">SDカードメニュー</string>
+    <string name="sdcard_setting_information">SDカード情報</string>
+    <string name="sdcard_setting_initialization">SDカード初期化</string>
     <string name="sdcard_normal_dir">Normal : </string>
     <string name="sdcard_event_dir">Event : </string>
     <string name="sdcard_parking_dir">Parking : </string>
@@ -128,7 +128,7 @@
     <string name="leveler_detail_context2">1 . Parking the car in a safe and level place.</string>
     <string name="leveler_detail_context3">2 . On the next screen, adjust the title of the machine so that the moving circle comes to the center.</string>
     <string name="gps_status_title">GPS Trusted</string>
-    <string name="communication">Communication Setting</string>
+    <string name="communication">通信機能設定</string>
     <string name="communication_emergency_contact_person">Emergency Contact Person</string>
     <string name="communication_emergency_automatic_notification">Emergency Automatic Notification</string>
     <string name="communication_emergency_automatic_notification_on">ON</string>
@@ -141,7 +141,7 @@
     <string name="weather_report">Weather Report</string>
     <string name="help">Help</string>
     <string name="service_information_notified">Service Information Notified</string>
-    <string name="main_menu_us">User Selection</string>
+    <string name="main_menu_us">ユーザー選択</string>
     <string name="set_wizard_help_context_start_setting">Setting is about to start</string>
     <string name="set_wizard_help_context_leveler">Level setting confirmation</string>
     <string name="set_wizard_help_context_vehicle_type">Vehicle Type setting confirmation</string>
