修改system setting 中的英日文转化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,16 +47,16 @@
     <string name="tv_system_settings_date_time">日付/時刻</string>
     <string name="tv_system_settings_notification_sound_volume">報知音音量</string>
     <string name="tv_system_settings_playback_volume">再生音量</string>
-    <string name="tv_system_settings_preview">Preview</string>
+    <string name="tv_system_settings_preview">映像確認</string>
     <string name="tv_system_settings_lcd_brightness">モニター明るさ</string>
-    <string name="tv_system_settings_screen_power_saving">モニター画面節電</string>
-    <string name="tv_system_settings_installation_tool">Installation tool</string>
+    <string name="tv_system_settings_screen_power_saving">モニター画面節電設定</string>
+    <string name="tv_system_settings_installation_tool">設置ツール</string>
     <string name="tv_system_settings_bluetooth">Bluetooth設定</string>
     <string name="tv_system_settings_infrared_led">Infrared LED</string>
-    <string name="tv_system_settings_setting_initialization">Setting initialization</string>
-    <string name="tv_system_settings_installation_wizard">Installation wizard</string>
-    <string name="tv_system_settings_2nd_camera">2nd Camera</string>
-    <string name="tv_system_settings_system_update">System update</string>
+    <string name="tv_system_settings_setting_initialization">設定初期化</string>
+    <string name="tv_system_settings_installation_wizard">セットアップ</string>
+    <string name="tv_system_settings_2nd_camera">2ndカメラ設定</string>
+    <string name="tv_system_settings_system_update">システム更新</string>
     <string name="tv_system_settings_system_information">システム情報</string>
 
     <string name="parking_record_rt">Recording time</string>
@@ -90,17 +90,19 @@
     <string name="sdcard_init_fail">Format Failed</string>
 
     <string name="tv_date_time">日付/時刻</string>
-    <string name="tv_automatic">Automatic</string>
-    <string name="tv_manual">Manual</string>
-    <string name="tv_date_time_setting">Date/time setting</string>
-    <string name="tv_monitor_time_settings">Time settings</string>
-    <string name="tv_monitor_time_10sec">10 sec</string>
-    <string name="tv_monitor_time_1min">1 min</string>
-    <string name="tv_monitor_time_3min">3 min</string>
-    <string name="tv_monitor_operation_settings">Operation settings</string>
-    <string name="tv_monitor_operation_on">Always ON</string>
-    <string name="tv_monitor_operation_off">OFF</string>
-    <string name="tv_monitor_operation_dim">Dim</string>
+    <string name="tv_automatic">自動調整</string>
+    <string name="tv_manual">手動設定</string>
+    <string name="tv_date_time_setting">日時設定画面</string>
+    <string name="tv_notifacation_valume">音量設定画面</string>
+    <string name="tv_playback_valume">音量設定画面</string>
+    <string name="tv_monitor_time_settings">時間設定</string>
+    <string name="tv_monitor_time_10sec">10秒</string>
+    <string name="tv_monitor_time_1min">１分</string>
+    <string name="tv_monitor_time_3min">３分</string>
+    <string name="tv_monitor_operation_settings">動作設定</string>
+    <string name="tv_monitor_operation_on">常時点灯</string>
+    <string name="tv_monitor_operation_off">消灯</string>
+    <string name="tv_monitor_operation_dim">暗くする</string>
     <string name="driving_support_setting">Driving Support Setting</string>
 
     <string name="vehicle_type">車両タイプ</string>
@@ -117,27 +119,27 @@
     <string name="sys_signal_strength">Signal Strength</string>
     <string name="sys_imei">IMEI</string>
     <string name="sys_imei_sv">IMEI SV</string>
-    <string name="sys_version">System Version</string>
-    <string name="sys_sim">SIM</string>
-    <string name="sys_open_license">Open Source License</string>
+    <string name="sys_version">システムバージョン X.XX</string>
+    <string name="sys_sim">SIM情報</string>
+    <string name="sys_open_license">オープンソースライセンス</string>
 
-    <string name="installation_tool_leveler">Leveler</string>
-    <string name="installation_tool_satellite">Satellite reception status</string>
-    <string name="leveler_detail_title">Level Adjustment</string>
+    <string name="installation_tool_leveler">水準器</string>
+    <string name="installation_tool_satellite">衛星受信状態</string>
+    <string name="leveler_detail_title">水準器画面</string>
     <string name="leveler_detail_context1">Adjust level of driving recording.</string>
     <string name="leveler_detail_context2">1 . Parking the car in a safe and level place.</string>
     <string name="leveler_detail_context3">2 . On the next screen, adjust the title of the machine so that the moving circle comes to the center.</string>
-    <string name="gps_status_title">GPS Trusted</string>
+    <string name="gps_status_title">ＧＰＳ受信強度画面</string>
     <string name="communication">通信機能設定</string>
     <string name="communication_emergency_contact_person">Emergency Contact Person</string>
     <string name="communication_emergency_automatic_notification">Emergency Automatic Notification</string>
     <string name="communication_emergency_automatic_notification_on">ON</string>
     <string name="communication_emergency_automatic_notification_off">OFF</string>
-    <string name="system_version">System Version</string>
+    <string name="system_version">システムバージョン X.XX</string>
     <string name="mounting_position">取付位置</string>
-    <string name="mounting_position_left">Left</string>
-    <string name="mounting_position_middle">Middle</string>
-    <string name="mounting_position_right">Right</string>
+    <string name="mounting_position_left">左</string>
+    <string name="mounting_position_middle">中央</string>
+    <string name="mounting_position_right">右</string>
     <string name="weather_report">Weather Report</string>
     <string name="help">Help</string>
     <string name="service_information_notified">Service Information Notified</string>
